style.css
/* ... */
.exportButton:hover {
    background-color: #1a1a1a;
    color: black;
}
.exportText {
    height: 100%;
    width: 65%;
    font-size: 15px;
    display: flex;
    align-items: center;
    justify-content: right;
    text-align: right;
    white-space: wrap;
}
.exportIconBox {
    height: 100%;
    width: 35%;
    display: flex;
    align-items: center;
    justify-content: center;
    text-align: center;
}
.exportIcon {
    height: 100%;
    width: auto;
    object-fit: contain;
}



.classVoidSpace {
    width: 100%;
    height: 15%;
    display: flex;
    text-align: center;
    white-space: normal;
    box-sizing: border-box;
}
/* d9d9d9 */
.settingsIcon {
    /* width: 70%; */
    height: 80%;
    width: 80%;
    object-fit: contain;
}

/* Navbar container */
.iconsBar {
    width: 100%;
    display: flex;
    box-sizing: border-box;
    padding: 0%;
  }
  .dropdown {
    width: 33.3333%;
    position: relative;
    /* overflow: visible; */
    border-radius: 20%;
    box-sizing: border-box;
    border: 2px solid #666666;
    text-align: center;
  }
  .dropbtn {
    height: 100%;
    width: 100%;
    display: flex;
    justify-content: center;
    align-items: center;
    text-align: center;
    box-sizing: border-box;
    border-radius: 20%;
  }
  /* Dropdown button */
  .dropdown .dropbtn {
    /* font-size: 30px; */
    background-color: #d9d9d9;
    color: black;
    border: none;
    outline: none;
    font-family: inherit;
    padding: 0;
    margin: 0; 
    box-sizing: border-box;
  }
  /* Dropdown content (hidden by default) */
  .dropdown-content {
    display: none;
    position: absolute;
    background-color: #d9d9d9;
    top: 100%;
    left: 0%;
    width: 260px;
    z-index: 1;
    box-sizing: border-box;
  }
  /* Show the dropdown menu on hover */
  .dropdown:hover .dropdown-content {
    display: block;
  }

.helpBox {
    width: 100%;
    height: 200px;
    background-color: black;
    color: white;
    display: flex;
    flex-direction: column;
    box-sizing: border-box;
    border: 2px solid #666666;
    overflow-y: auto;
    white-space: normal;
}
.helpBoxHeader {
    width: 100%;
    height: 20%;
    font-size: 20px;
    background-color: #434343;
    border-bottom: 1px solid black;
    box-sizing: border-box;
    display: flex;
    text-align: center;
    align-items: center;
    justify-content: center;
}
.helpBoxText {
    width: 100%;
    height: 30%;
    font-size: 15px;
}


.buildsBox {
    width: 100%;
    height: 200px;
    background-color: black;
    color: white;
    display: flex;
    flex-direction: column;
    box-sizing: border-box;
    border: 2px solid #666666;
    overflow-y: auto;
    white-space: normal;
}
.buildsBoxHeader {
    width: 100%;
    height: 30%;
    font-size: 20px;
    background-color: #434343;
    border-bottom: 1px solid black;
    box-sizing: border-box;
    display: flex;
    text-align: center;
    align-items: center;
    justify-content: center;
}
.buildsBoxText {
    width: 100%;
    height: 70%;
    font-size: 15px;
}

.togglesBox {
    width: 100%;
    height: 600px;
    background-color: #666666;
    color: white;
    display: flex;
    flex-direction: column;
    box-sizing: border-box;
    border: 2px solid #666666;
    overflow-y: auto;
}
.togglesHeader { 
    width: 100%;
    height: 5%;
    background-color: #434343;
    font-size: 30px;
    display: flex;
    justify-content: center;
    align-items: center;
    text-align: center;
    box-sizing: border-box;
}
.togglesRowBox {
    height: 18px;
    box-sizing: border-box;
    border-bottom: 1px solid #434343;
    display: flex;
}
.togglesTraitBox {
    height: auto;
    width: 100%;
    display: flex;
    flex-direction: column;
    box-sizing: border-box;
}
.traitButtonImage {
    width: 100%;
    height: 100%;
    filter: brightness(2);
    object-fit: contain;
}




.togglesStat {
    width: 25%;
    height: 100%;
    font-size: 12px;
    display: flex;
    text-align: center;
    justify-content: center;
    align-items: center;
    background-color: #434343;
    white-space: normal;
    box-sizing: border-box;
}
.togglesValue {
    width: 60%;
    height: 100%;
    font-size: 12px;
    display: flex;
    text-align: center;
    justify-content: center;
    align-items: center;
    white-space: nowrap;
    box-sizing: border-box;
    border-left: 1px solid black;
}
.togglesUse {
    width: 15%;
    height: 100%;
    font-size: 12px;
    display: flex;
    justify-content: center;
    align-items: center;
    text-align: center;
    white-space: nowrap;
    box-sizing: border-box;
    border-left: 1px solid black;
}

.togglesCheckBox {
    width: auto;
    height: 100%;
    /* font-size: 10px; */
    display: flex;
    text-align: center;
    justify-content: center;
    align-items: center;
    white-space: normal;
}


/* this is for archselects and armor columns */
.classAndArmor {
    display: flex;
    width: 100%;
    height: auto;
    display: flex;
    white-space: nowrap;
    grid-column: 2 / span 1;
    grid-row: 1;
}


div {
    color: white;
}

* {
/* outline: 2px solid red; */
font-family: Arial, Helvetica, sans-serif;
}


/* ----------------------------------------------------------------------------------------*/
/* ------------------------- BASIC STATS Column -------------------------------------------*/
/* ----------------------------------------------------------------------------------------*/
.basicsBox {
    width: 100%;
    height: 800px;
    max-height: 800px;
    background-color: #666666;
    color: white;
    display: flex;
    flex-direction: column;
    /* white-space: normal; */
    box-sizing: border-box;
}
/* ... */

